--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -22,8 +23,16 @@ jobs:
     - name: Install dependencies
       run: npm run install:all
       
-    - name: Build
-      run: npm run build
+    - name: Type check
+      run: |
+        cd backend && npm run type-check
+        cd ../frontend && npm run type-check
+      
+    - name: Build backend
+      run: cd backend && npm run build
+      
+    - name: Build frontend
+      run: cd frontend && npm run build
       
     - name: Test
       run: npm test --if-present
