Simplify Helm chart to match portfolio template
- Simplify Chart.yaml to basic configuration only
- Simplify values.yaml removing complex configurations
- Keep only essential templates: deployment, service, ingress
- Remove HPA, PVC, ServiceAccount, NOTES.txt templates
- Update _helpers.tpl to simplified version
- Match structure from fullstackjam/portfolio helm/portfolio

--- a/helm/pulsehub/Chart.yaml
+++ b/helm/pulsehub/Chart.yaml
@@ -1,18 +1,5 @@
 apiVersion: v2
 name: pulsehub
-description: A Helm chart for PulseHub - Real-time trending topics aggregator
-type: application
+description: A Helm chart for PulseHub - 聚合各大社交媒体平台实时热点榜单的Web应用
 version: 0.1.0
-appVersion: "1.0.0"
-keywords:
-  - trending
-  - social-media
-  - aggregation
-  - real-time
-home: https://github.com/your-org/pulsehub
-sources:
-  - https://github.com/your-org/pulsehub
-maintainers:
-  - name: PulseHub Team
-    email: team@pulsehub.com
-dependencies: []
+appVersion: 1.0.0
