--- a/helm/pulsehub/values.yaml
+++ b/helm/pulsehub/values.yaml
@@ -1,44 +1,18 @@
-# Default values for pulsehub
-# This is a YAML-formatted file.
-
 replicaCount: 1
 
 image:
-  repository: pulsehub
+  repository: fullstackjam/plusehub
+  tag: latest
   pullPolicy: IfNotPresent
-  tag: "latest"
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  create: true
-  annotations: {}
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext:
-  fsGroup: 1001
-
-securityContext:
-  capabilities:
-    drop:
-    - ALL
-  readOnlyRootFilesystem: false
-  runAsNonRoot: true
-  runAsUser: 1001
 
 service:
   type: ClusterIP
-  port: 80
-  targetPort: 3001
+  port: 3001
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
   hosts:
     - host: pulsehub.fullstackjam.com
       paths:
@@ -46,52 +20,10 @@ ingress:
           pathType: Prefix
   tls: []
 
-resources:
-  limits:
-    cpu: 1000m
-    memory: 1Gi
-  requests:
-    cpu: 500m
-    memory: 512Mi
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80
+resources: {}
 
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
-
-# Environment variables
-env:
-  NODE_ENV: production
-  PORT: "3001"
-
-# Health check configuration
-healthCheck:
-  enabled: true
-  path: /api/health
-  initialDelaySeconds: 30
-  periodSeconds: 10
-  timeoutSeconds: 5
-  failureThreshold: 3
-
-# Persistence (if needed for logs)
-persistence:
-  enabled: false
-  storageClass: ""
-  accessMode: ReadWriteOnce
-  size: 1Gi
-
-# Monitoring
-monitoring:
-  enabled: false
-  serviceMonitor:
-    enabled: false
-    interval: 30s
-    scrapeTimeout: 10s
