Ultra-simplify Helm templates to match portfolio structure
- Remove all complex Helm template syntax and helpers
- Use hardcoded values instead of template variables
- Simplify deployment.yaml to basic structure
- Simplify service.yaml to basic structure
- Simplify ingress.yaml to basic structure
- Remove _helpers.tpl as no longer needed
- Match exact simplicity of portfolio helm templates

--- a/helm/pulsehub/templates/deployment.yaml
+++ b/helm/pulsehub/templates/deployment.yaml
@@ -1,26 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "pulsehub.fullname" . }}
-  labels:
-    {{- include "pulsehub.labels" . | nindent 4 }}
+  name: pulsehub
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
-      {{- include "pulsehub.selectorLabels" . | nindent 6 }}
+      app: pulsehub
   template:
     metadata:
       labels:
-        {{- include "pulsehub.selectorLabels" . | nindent 8 }}
+        app: pulsehub
     spec:
       containers:
-        - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 3001
-              protocol: TCP
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+      - name: pulsehub
+        image: fullstackjam/plusehub:latest
+        ports:
+        - containerPort: 3001
