Refactor Helm chart for PulseHub
- Update Chart.yaml description for clarity
- Modify values.yaml to include image pull policy and adjust ingress configuration
- Rename resources and update deployment, service, and ingress templates for consistency
- Change service and deployment names to 'plusehub' and adjust ports accordingly

--- a/helm/pulsehub/Chart.yaml
+++ b/helm/pulsehub/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: pulsehub
-description: A Helm chart for PulseHub - 聚合各大社交媒体平台实时热点榜单的Web应用
+description: A Helm chart for PulseHub
 version: 0.1.0
 appVersion: 1.0.0
