--- a/helm/pulsehub/templates/ingress.yaml
+++ b/helm/pulsehub/templates/ingress.yaml
@@ -1,16 +1,34 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: pulsehub-ingress
+  name: plusehub
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.fullstackjam.com"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
+  ingressClassName: nginx
+  {{- if .Values.ingress.hosts }}
   rules:
-  - host: pulsehub.fullstackjam.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: pulsehub-service
-            port:
-              number: 3001
+    {{- range .Values.ingress.hosts }}
+    - host: {{ .host }}
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: plusehub
+                port:
+                  number: 80
+    {{- end }}
+  {{- end }}
+  tls:
+    {{- if .Values.ingress.hosts }}
+    - hosts:
+        {{- range .Values.ingress.hosts }}
+        - {{ .host }}
+        {{- end }}
+      secretName: {{ .Values.ingress.tlsSecret }}
+    {{- end }}
