--- a/helm/pulsehub/templates/service.yaml
+++ b/helm/pulsehub/templates/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pulsehub-service
+  name: plusehub
 spec:
   selector:
-    app: pulsehub
+    app: plusehub
   ports:
-  - protocol: TCP
-    port: 3001
-    targetPort: 3001
-  type: ClusterIP
+    - protocol: TCP
+      port: 80
+      targetPort: 3001
