--- a/helm/pulsehub/values.yaml
+++ b/helm/pulsehub/values.yaml
@@ -2,28 +2,11 @@ replicaCount: 1
 
 image:
   repository: fullstackjam/plusehub
+  pullPolicy: Always
   tag: latest
-  pullPolicy: IfNotPresent
-
-service:
-  type: ClusterIP
-  port: 3001
 
 ingress:
   enabled: true
-  annotations:
-    kubernetes.io/ingress.class: nginx
   hosts:
-    - host: pulsehub.fullstackjam.com
-      paths:
-        - path: /
-          pathType: Prefix
-  tls: []
-
-resources: {}
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+    - host: plusehub.fullstackjam.com
+  tlsSecret: plusehub-tls-certificate
