fix: Correct spelling and repository references in documentation and configuration files
- Updated README.md, Helm chart files, and Docker workflow to replace 'plusehub' with 'pulsehub' for consistency
- Adjusted GitHub link in Dashboard component to point to the correct repository
- Ensured all references to the application name and URLs are accurate across the project

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,5 +28,5 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            fullstackjam/plusehub:${{ env.SHORT_SHA }}
-            fullstackjam/plusehub:latest
+            fullstackjam/pulsehub:${{ env.SHORT_SHA }}
+            fullstackjam/pulsehub:latest
