--- a/helm/pulsehub/values-example.yaml
+++ b/helm/pulsehub/values-example.yaml
@@ -5,7 +5,7 @@ replicaCount: 2
 
 # Image configuration
 image:
-  repository: fullstackjam/plusehub
+  repository: fullstackjam/pulsehub
   pullPolicy: Always
   tag: v1.0.0
 
@@ -24,14 +24,14 @@ ingress:
     external-dns.alpha.kubernetes.io/target: homelab-tunnel.fullstackjam.com
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
   hosts:
-    - host: plusehub.fullstackjam.com
+    - host: pulsehub.fullstackjam.com
       paths:
         - path: /
           pathType: Prefix
   tls:
-    - secretName: plusehub-tls-certificate
+    - secretName: pulsehub-tls-certificate
       hosts:
-        - plusehub.fullstackjam.com
+        - pulsehub.fullstackjam.com
 
 # Resource limits
 resources:
