--- a/.dockerignore
+++ b/.dockerignore
@@ -4,9 +4,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production builds
-frontend/dist
-backend/dist
+# Build outputs
+dist
+build
 
 # Environment files
 .env
@@ -33,14 +33,48 @@ Thumbs.db
 README.md
 *.md
 
-# Scripts
-start.sh
-start.bat
-
-# Helm charts
-helm/
-
-# Docker files
+# Docker
 Dockerfile
 .dockerignore
 docker-compose.yml
+
+# CI/CD
+.github
+.gitlab-ci.yml
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
