--- a/helm/pulsehub/Chart.yaml
+++ b/helm/pulsehub/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
 name: pulsehub
-description: A Helm chart for PulseHub
-version: 0.1.0
-appVersion: 1.0.0
+description: PulseHub - Social Media Hot Topics Aggregation Platform
+type: application
+version: 2.0.0
+appVersion: "2.0.0"
