--- a/helm/pulsehub/values.yaml
+++ b/helm/pulsehub/values.yaml
@@ -2,41 +2,27 @@ replicaCount: 1
 
 image:
   repository: fullstackjam/pulsehub
-  pullPolicy: Always
   tag: latest
+  pullPolicy: IfNotPresent
 
 service:
   type: ClusterIP
-  port: 3001
-  targetPort: 3001
+  port: 80
 
 ingress:
   enabled: true
-  className: nginx
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    external-dns.alpha.kubernetes.io/target: homelab-tunnel.fullstackjam.com
-    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
   hosts:
     - host: pulsehub.fullstackjam.com
       paths:
         - path: /
           pathType: Prefix
-  tls:
-    - secretName: pulsehub-tls-certificate
-      hosts:
-        - pulsehub.fullstackjam.com
+  annotations:
+    kubernetes.io/ingress.class: nginx
 
 resources:
   limits:
-    cpu: 500m
-    memory: 512Mi
+    cpu: 200m
+    memory: 256Mi
   requests:
     cpu: 100m
     memory: 128Mi
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
