--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "1.0.0",
   "description": "PulseHub - Web application that aggregates real-time hot topics from major social media platforms",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "dev:backend": "cd backend && npm run dev",
-    "dev:frontend": "cd frontend && npm run dev",
-    "build": "npm run build:backend && npm run build:frontend",
-    "build:backend": "cd backend && npm run build",
-    "build:frontend": "cd frontend && npm run build",
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
-    "start": "cd backend && npm start",
-    "start:prod": "cd backend && npm run start:prod",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "start": "vite preview",
+    "deploy": "npm run build",
     "docker:build": "docker build -t pulsehub .",
-    "docker:run": "docker run -p 3001:3001 pulsehub",
-    "docker:compose": "docker-compose up -d",
+    "docker:run": "docker run -p 80:80 pulsehub",
     "helm:install": "helm install pulsehub ./helm/pulsehub",
     "helm:upgrade": "helm upgrade pulsehub ./helm/pulsehub",
-    "helm:uninstall": "helm uninstall pulsehub"
+    "helm:uninstall": "helm uninstall pulsehub",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "keywords": [
     "social-media",
@@ -29,12 +26,28 @@
     "zhihu",
     "baidu",
     "react",
-    "nodejs",
-    "typescript"
+    "typescript",
+    "vite"
   ],
   "author": "PulseHub Team",
   "license": "MIT",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8"
   }
 }
