--- a/helm/pulsehub/templates/serviceaccount.yaml
+++ b/helm/pulsehub/templates/serviceaccount.yaml
@@ -1,12 +1,6 @@
-{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "pulsehub.serviceAccountName" . }}
+  name: {{ include "pulsehub.fullname" . }}
   labels:
     {{- include "pulsehub.labels" . | nindent 4 }}
-  {{- with .Values.serviceAccount.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-{{- end }}
