--- a/helm/pulsehub/templates/deployment.yaml
+++ b/helm/pulsehub/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "pulsehub.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "pulsehub.labels" . | nindent 4 }}
 spec:
