--- a/helm/pulsehub/templates/service.yaml
+++ b/helm/pulsehub/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "pulsehub.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "pulsehub.labels" . | nindent 4 }}
 spec:
