--- a/helm/pulsehub/templates/serviceaccount.yaml
+++ b/helm/pulsehub/templates/serviceaccount.yaml
@@ -2,5 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "pulsehub.fullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "pulsehub.labels" . | nindent 4 }}
