feat: Implement service and autoscaling configurations in PulseHub Helm chart
- Added service configuration options for type and port in values.yaml.
- Introduced Horizontal Pod Autoscaler (HPA) template for dynamic scaling based on CPU utilization.
- Created a test connection pod template to verify service accessibility.

--- a/helm/pulsehub/values.yaml
+++ b/helm/pulsehub/values.yaml
@@ -5,6 +5,16 @@ image:
   repository: fullstackjam/pulsehub
   tag: latest
 
+service:
+  type: ClusterIP
+  port: 80
+
 ingress:
   enabled: true
   host: pulsehub.fullstackjam.com
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
