--- a/helm/pulsehub/templates/service.yaml
+++ b/helm/pulsehub/templates/service.yaml
@@ -6,9 +6,9 @@ metadata:
   labels:
     {{- include "pulsehub.labels" . | nindent 4 }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   ports:
-    - port: 80
+    - port: {{ .Values.service.port }}
       targetPort: http
       protocol: TCP
       name: http
