--- a/helm/pulsehub/templates/ingress.yaml
+++ b/helm/pulsehub/templates/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
   labels:
     {{- include "pulsehub.labels" . | nindent 4 }}
   annotations:
+    # Nginx Ingress Controller annotations
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
@@ -18,7 +19,15 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
+    
+    # External DNS annotations for Cloudflare Tunnel
+    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.fullstackjam.com"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
+    
+    # Certificate management
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    
+    # ArgoCD sync
     argocd.argoproj.io/sync-wave: "1"
 spec:
   ingressClassName: nginx
