--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,7 @@
     }
   },
   "forwardPorts": [3000, 3001],
-  "postCreateCommand": "npm run install:all",
+  "postCreateCommand": "npm install",
+  "postStartCommand": "npm run dev",
   "remoteUser": "node"
 }
