--- a/.dockerignore
+++ b/.dockerignore
@@ -1,80 +1,16 @@
-# Dependencies
 node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build outputs
-dist
-build
-
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# IDE files
-.vscode
-.idea
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Git
+npm-debug.log
 .git
 .gitignore
-
-# Documentation
 README.md
-*.md
-
-# Docker
-Dockerfile
-.dockerignore
-docker-compose.yml
-
-# CI/CD
-.github
-.gitlab-ci.yml
-
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
+.env
+.nyc_output
 coverage
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
+.nyc_output
+.vscode
+.idea
+*.log
+dist
+.DS_Store
+helm
+backend
