feat: Add PulseHub Helm chart with deployment instructions and resource configurations
- Introduced a new README.md for the PulseHub Helm chart, detailing installation steps and configuration options.
- Updated values.yaml to simplify service configurations and removed unnecessary service account template.
- Modified deployment.yaml to streamline container resource settings and removed unused probes.
- Cleaned up ingress.yaml by removing redundant annotations for Nginx Ingress Controller.
- Adjusted service.yaml to set fixed port values for clarity.

--- a/helm/pulsehub/templates/deployment.yaml
+++ b/helm/pulsehub/templates/deployment.yaml
@@ -15,27 +15,15 @@ spec:
       labels:
         {{- include "pulsehub.selectorLabels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "pulsehub.fullname" . }}
       containers:
         - name: pulsehub
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: IfNotPresent
           ports:
-            - name: http
-              containerPort: 80
+            - containerPort: 80
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
+              name: http
           resources:
             limits:
-              cpu: 100m
               memory: 128Mi
             requests:
-              cpu: 100m
-              memory: 128Mi
+              memory: 64Mi
