--- a/helm/pulsehub/templates/ingress.yaml
+++ b/helm/pulsehub/templates/ingress.yaml
@@ -1,34 +1,28 @@
-{{- if .Values.ingress.enabled -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "pulsehub.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  name: {{ .Values.app.name }}
   labels:
-    {{- include "pulsehub.labels" . | nindent 4 }}
+    {{- include "pulsehub.commonLabels" . | nindent 4 }}
   annotations:
-    # External DNS annotations for Cloudflare Tunnel
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
     external-dns.alpha.kubernetes.io/target: "homelab-tunnel.fullstackjam.com"
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    
-    # ArgoCD sync
     argocd.argoproj.io/sync-wave: "1"
 spec:
   ingressClassName: nginx
   rules:
-    - host: {{ .Values.ingress.host | quote }}
+    - host: {{ .Values.ingress.host }}
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ include "pulsehub.fullname" . }}
+                name: {{ .Values.app.name }}
                 port:
                   number: 80
   tls:
     - hosts:
-        - {{ .Values.ingress.host | quote }}
-      secretName: {{ include "pulsehub.fullname" . }}-tls
-{{- end }}
+        - {{ .Values.ingress.host }}
+      secretName: {{ .Values.app.name }}-tls
